
add_library(dycore INTERFACE)
target_include_directories(dycore INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(dycore INTERFACE -DPAMC_DYCORE)


#include_directories(dycore INTERFACE /home/celdred/parallel-netcdf-gnu/include)
#link_directories(dycore INTERFACE /home/celdred/parallel-netcdf-gnu/lib)
#target_link_libraries(dycore INTERFACE pnetcdf)

target_include_directories(dycore INTERFACE src)
target_include_directories(dycore INTERFACE src/models)
target_include_directories(dycore INTERFACE src/operators)
target_include_directories(dycore INTERFACE src/timesteppers)
target_include_directories(dycore INTERFACE src/hamiltonians)
target_include_directories(dycore INTERFACE src/grids)
target_include_directories(dycore INTERFACE src/io)
target_include_directories(dycore INTERFACE src/core)

if ("${PAMC_MODEL}" STREQUAL "layermodel")
  target_compile_definitions(dycore INTERFACE -DPAMC_LAYER)
endif()
if ("${PAMC_MODEL}" STREQUAL "extrudedmodel")
  target_compile_definitions(dycore INTERFACE -DPAMC_EXTRUDED)
endif()

if ("${PAMC_HAMIL}" STREQUAL "swe")
  target_compile_definitions(dycore INTERFACE -DPAMC_SWE)
endif()
if ("${PAMC_HAMIL}" STREQUAL "tswe")
  target_compile_definitions(dycore INTERFACE -DPAMC_TSWE)
endif()
if ("${PAMC_HAMIL}" STREQUAL "ce")
  target_compile_definitions(dycore INTERFACE -DPAMC_CE)
endif()
if ("${PAMC_HAMIL}" STREQUAL "an")
  target_compile_definitions(dycore INTERFACE -DPAMC_AN)
endif()
if ("${PAMC_HAMIL}" STREQUAL "man")
  target_compile_definitions(dycore INTERFACE -DPAMC_MAN)
endif()
if ("${PAMC_HAMIL}" STREQUAL "ce_p")
  target_compile_definitions(dycore INTERFACE -DPAMC_CEp)
endif()
if ("${PAMC_HAMIL}" STREQUAL "mce_rho")
  target_compile_definitions(dycore INTERFACE -DPAMC_MCErho)
endif()
if ("${PAMC_HAMIL}" STREQUAL "mce_rho_p")
  target_compile_definitions(dycore INTERFACE -DPAMC_MCErhop)
endif()
if ("${PAMC_HAMIL}" STREQUAL "mce_rhod")
  target_compile_definitions(dycore INTERFACE -DPAMC_MCErhod)
endif()
if ("${PAMC_HAMIL}" STREQUAL "mce_rhod_p")
  target_compile_definitions(dycore INTERFACE -DPAMC_MCErhodp)
endif()

if ("${PAMC_THERMO}" STREQUAL "none")
  target_compile_definitions(dycore INTERFACE -DPAMC_THERMONONE)
endif()
if ("${PAMC_THERMO}" STREQUAL "idealgaspottemp")
  target_compile_definitions(dycore INTERFACE -DPAMC_IDEAL_GAS_POTTEMP)
endif()
if ("${PAMC_THERMO}" STREQUAL "idealgasentropy")
  target_compile_definitions(dycore INTERFACE -DPAMC_IDEAL_GAS_ENTROPY)
endif()
if ("${PAMC_THERMO}" STREQUAL "constkappavirpottemp")
  target_compile_definitions(dycore INTERFACE -DPAMC_CONST_KAPPA_VIRPOTTEMP)
endif()
if ("${PAMC_THERMO}" STREQUAL "unapproxpottemp")
  target_compile_definitions(dycore INTERFACE -DPAMC_UNAPPROX_POTTEMP)
endif()
if ("${PAMC_THERMO}" STREQUAL "unapproxentropy")
  target_compile_definitions(dycore INTERFACE -DPAMC_UNAPPROX_ENTROPY)
endif()

if ("${PAMC_IO}" STREQUAL "parallel")
  target_compile_definitions(dycore INTERFACE -DPAMC_PARALLELIO)
endif()
if ("${PAMC_IO}" STREQUAL "serial")
  target_compile_definitions(dycore INTERFACE -DPAMC_SERIALIO)
endif()
if ("${PAMC_IO}" STREQUAL "none")
  target_compile_definitions(dycore INTERFACE -DPAMC_NOIO)
endif()
